# Flight-Alert-App

./: .env.example  .gitignore  3d_map.html  FINAL_VERIFICATION.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  PROBLEM_STATEMENT_CHECKLIST.md  PYLANCE_ERRORS_RESOLUTION.md  PYLANCE_FIXES_COMPLETE.md  QUICK_START.md  README.md  SINGLE_FILE_README.md  TESTING_GUIDE.md  VALIDATION_REPORT.md  auth.py  base.html  config.py  create_alert.html  dashboard.html  demo_api.py  final_check.sh  flight_alert.db  flight_apis.py  home.html  login.html  main.py  main_enhanced.py  main_old.py.backup  models.py  preferences.html  requirements.txt  schema.sql  search.html  signup.html  test_api.py  test_endpoints.py  test_other_main.py  upgrade.html  validate_fixes.py  (+1 more)
attached assets/: Pasted--1-Get-the-Full-Airport-Dataset-A-comprehensive-source-the-public-airport-codes-CSV-from-OurAirp-1750273656804_1750273656807.txt  Pasted--1-Price-War-Tracker-Show-price-battles-between-airlines-on-the-same-route-e-g-Ryanair-vs--1750937578115_1750937578117.txt  Pasted--Route-LHR-AMS-on-2025-07-22-RE-1752605760256_1752605760271.txt  (+99 more)
extension/: background.js  scrape.js  (+5 more)
other/: airports.json  alerts.json  health_monitor.py  install_scraper_deps.py  main.py  pyproject.toml  quick_test.py  replit.md  replit.nix  requirements.txt  requirements_scraper.txt  run_tests.py  scraper_test_debug.py  selector_updater.py  setup_playwright.py  setup_production.py  site_configs.json  site_monitor.py  test_fastapi.py  test_scraping.py  users.json
other/templates/: dashboard.html  home.html
(+2 files in other folders)
