[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests-html>=0.10.0",
    "requests>=2.32.4",
    "stripe>=12.2.0",
    "werkzeug>=3.1.3",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
    "lxml-html-clean>=0.4.2",
]
